# getcontext-llm-context-tool

./: .contextignore  README.md  pyproject.toml  requirements.txt
src/codestract/: app.py  xcodestract.py
src/codestract.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/codestract/ui/widgets/: file_tree_panel.py
src/codestract/utils/: document_processor.py  file_utils.py
src/getcontext/: __init__.py  app.py  exporter.py  xgetcontext.py
src/getcontext.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/getcontext/utils/: logging.py
