[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getcontext"
version = "0.1.0"
description = "A lightweight CLI tool for exporting and combining code files and documents into context files for LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Rishav Kundu", email = "mail@rishav.app"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "textual>=0.52.1",
    "rich>=13.7.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.2",
    "PyMuPDF>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
]

[project.scripts]
getcontext = "getcontext.app:main"
xgetcontext = "getcontext.xgetcontext:main"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.setuptools]
packages = ["getcontext"]
package-dir = {"" = "src"}